<resources>
    <string name="app_name">Кинотеатр</string>
    <string name="Movie_could_not_find">Фильм не найден</string>
    <string name="error">Ошибка</string>
    <string name="OK">OK</string>
    <string name="reload">Перезагрузить</string>
    <string name="now_playing">Недавний просмотр</string>
    <string name="upcoming">Найденные</string>
    <string name="home">Домой</string>
    <string name="favorites">Избранные</string>
    <string name="ratings">Рейтинги</string>
    <string name="dummy_button">Пустая кнопка</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cinema">Кинотеатр</string>
    <string name="about_program">О программе</string>
    <string name="message_dialog">Программа создана Василием</string>
    <string name="yes">Да</string>
    <string name="release_date">Дата выхода: </string>
    <string name="budget">Бюджет: </string>
    <string name="revenue">Сборы: </string>
    <string name="search">Поиск</string>
    <string name="about">О программе</string>
    <string name="looking_for">Ищем:</string>
    <string name="type">Тип фильма:</string>
    <string name="min">минут</string>
    <string name="rating">Рэйтинг:</string>
    <string name="first_request">король</string>
    <string name="receive_message">Получить сообщение</string>
    <string name="error_reading">Чтение ошибки</string>
    <string name="new_request_for_movie">Новый запрос по фильму</string>
    <string name="name">Имя</string>
    <string name="change_connection">Соединение потерено</string>
    <string name="movie_ratings">САМЫЕ ЛУЧШИЕ ФИЛЬМЫ</string>
    <string name="tv_series_ratings">ЛУЧШИЕ СЕРИАЛЫ</string>
    <string name="cartoon_ratings">ЛУЧШИЕ МИЛЬТФИЛЬМЫ</string>
    <string name="anime_ratings">ЛУЧШИЕ АНИМЕ</string>
    <string name="animated_series_ratings">ЛУЧШИЕ АНИМЕ СЕРИАЛЫ</string>
    <string name="tv_show_ratings">ЛУЧШИЕ ШОУ</string>
    <string name="mini_series_ratings">ЛУЧШИЕ МИНИ ФИЛЬМЫ</string>
    <string name="watched">ПРОСМОТРЕННО</string>
    <string name="for_adult">Для взрослых</string>
    <string name="back"><![CDATA[< Назад]]></string>
    <string name="content_provider">Content provider</string>
    <string name="authorities">com.example.cinema.provider</string>
    <string name="abonent_name">Имя абонента:</string>
    <string name="number">номер телефона:</string>
    <string name="sms">Посмотри фильм:</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации</string>
    <string name="dialog_title_gps_turned_off">GPS отключен</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS</string>
    <string name="dialog_message_last_known_location">Включите GPS</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="default_address_ed">Red Square, 1, Moscow</string>
    <string name="button_search_maps">Найти положение</string>
    <string name="map">Карта</string>
    <string name="search_place">Найти место</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">Кинотеатр</string>
    <string name="chanel_description">Мировая премьера в: </string>









    <string name="geofences_added">Clue Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_entered">Geofence entered.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <!-- Geofence Hints -->
    <string name="not_started_hint"></string>
    <string name="golden_gate_bridge_hint">Go to a bridge with a name that does not match the color that it is!</string>
    <string name="ferry_building_hint">Go to a market with an amazing assortment of delicious foods. It is a San Francisco classic!</string>
    <string name="pier_39_hint">Go to a pier popular for tourist attractions, carnival games, fresh fish, and delicious sourdough bread!</string>
    <string name="union_square_hint">Go to a square named after Civil War rallies held there, but now known for its amazing shopping!</string>

    <!-- Geofence Locations -->
    <string name="golden_gate_bridge_location">at the Golden Gate bridge</string>
    <string name="ferry_building_location">in the Ferry Building</string>
    <string name="pier_39_location">at Pier 39</string>
    <string name="union_square_location">in Union Square</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="location_required_error">Location services must be enabled for this game.</string>

    <string name="geofences_not_removed">Geofences not removed.</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="geofence_error">There was an error in finding your treasure</string>

    <!-- Notification Strings-->

    <string name="notification_channel_description">Geofence status notification</string>

    <!-- Content Description Strings -->
    <string name="android_map_description">An Android robot with a map</string>
</resources>