<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/adult"
        android:title="@string/for_adult"
        android:checkable="true"/>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_content_provider"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/content_provider"
        app:showAsAction="always" />
</menu>
